--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "surge": "cd build && cp index.html 200.html && surge --domain webrtc-react-chat.surge.sh",
+    "fire": "npm run build && npm run surge"
   },
   "eslintConfig": {
     "extends": [
